--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "start": "node index.js"
+    "start": "tsc && node index.js"
   },
   "author": "Aleksanteri Negru-Vode",
   "license": "MIT",
   "dependencies": {
+    "typescript": "2.3.4",
     "@types/express": "^4.0.35",
     "@types/node": "^7.0.29",
     "@types/socket.io": "^1.4.29",
