--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/socket.io": "^1.4.29",
     "@types/uuid": "^3.0.0",
     "express": "^4.15.3",
+    "mocha": "^3.4.2",
     "socket.io": "^2.0.2",
+    "socket.io-client": "^2.0.3",
     "typescript": "2.3.4",
     "uuid": "^3.1.0"
   }
