--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   "author": "Aleksanteri Negru-Vode",
   "license": "MIT",
   "dependencies": {
-    "@types/express": "^4.0.35",
+    "@types/body-parser": "^1.16.5",
+    "@types/express": "^4.0.37",
     "@types/node": "^7.0.29",
-    "@types/socket.io": "^1.4.29",
     "@types/uuid": "^3.0.0",
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mocha": "^3.4.2",
-    "socket.io": "^2.0.2",
-    "socket.io-client": "^2.0.3",
     "typescript": "2.3.4",
     "uuid": "^3.1.0"
   }
