--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/body-parser": "^1.16.5",
     "@types/express": "^4.0.37",
     "@types/node": "^7.0.29",
+    "@types/superagent": "^3.5.5",
     "@types/uuid": "^3.0.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mocha": "^3.4.2",
+    "superagent": "^3.6.0",
     "typescript": "2.3.4",
     "uuid": "^3.1.0"
   }
